--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,10 +26,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles 'proguard-rules.pro'
-           // signingConfig signingConfigs.config
+            signingConfig signingConfigs.config
         }
         debug {
-           // signingConfig signingConfigs.config
+            signingConfig signingConfigs.config
         }
     }
     packagingOptions {
