--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,16 +60,16 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v13:25.1.0'
     compile 'com.android.support:design:25.1.0'
-    compile 'com.facebook.fresco:fresco:0.9.0'
+    compile 'com.facebook.fresco:fresco:1.0.0'
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.github.lovetuzitong:MultiImageSelector:1.2'
     compile 'me.imid.swipebacklayout.lib:library:1.0.0'
     compile 'com.umeng.analytics:analytics:latest.integration'
-    compile files('libs/zxing.jar')
-    compile files('libs/AMap_Search_V2.8.0_20160105.jar')
-    compile files('libs/AMap_2DMap_V2.8.1_20160202.jar')
-    compile files('libs/AMap_Location_v2.3.0_20160112.jar')
+    compile 'com.google.zxing:core:3.3.0'
+    compile 'com.amap.api:search:3.6.1'
+    compile 'com.amap.api:map2d:3.0.0'
+    compile 'com.amap.api:location:3.2.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
