--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,8 +40,12 @@
         <activity android:name=".ui.main.MainActivity" />
         <activity android:name=".ui.community.AtyPostNew" />
         <activity android:name=".ui.community.AtyPostReply" />
-        <activity android:name=".ui.community.AtyTopic"  android:theme="@style/AppTheme.Translucent"/>
-        <activity android:name=".ui.community.AtyPost" android:theme="@style/AppTheme.Translucent"/>
+        <activity
+            android:name=".ui.community.PostListActivity"
+            android:theme="@style/AppTheme.Translucent" />
+        <activity
+            android:name=".ui.community.PostDetailActivity"
+            android:theme="@style/AppTheme.Translucent" />
         <activity android:name=".ui.AtyImage" android:theme="@style/AppTheme.Translucent"/>
         <activity android:name=".ui.user.AtyInfo" android:theme="@style/AppTheme.Translucent" />
         <activity android:name=".ui.user.AtyFriend" android:theme="@style/AppTheme.Translucent" />
@@ -63,9 +67,18 @@
         <activity android:name=".ui.user.AtyAudioRecord"
             android:screenOrientation="portrait"/>
 
-        <activity android:name=".ui.aty.AtyActivityDetail" android:theme="@style/AppTheme.Translucent" />
-        <activity android:name=".ui.aty.AtyPublicActivity" android:theme="@style/AppTheme.Translucent"/>
-        <activity android:name=".ui.aty.AtySearchActivity" android:theme="@style/AppTheme.Translucent"/>
+        <activity
+            android:name=".ui.activity.ActivityDetailActivity"
+            android:theme="@style/AppTheme.Translucent" />
+        <activity
+            android:name=".ui.activity.ActivityCommentActivity"
+            android:theme="@style/AppTheme.Translucent" />
+        <activity
+            android:name=".ui.activity.PublishActivityActivity"
+            android:theme="@style/AppTheme.Translucent" />
+        <activity
+            android:name=".ui.activity.SearchActivityActivity"
+            android:theme="@style/AppTheme.Translucent" />
 
 
         <activity android:name="me.nereo.multi_image_selector.MultiImageSelectorActivity" />
@@ -73,8 +86,12 @@
 
         <service android:name="com.amap.api.location.APSService"/>
 
-        <meta-data android:value="56ad96c667e58ef41100249d" android:name="UMENG_APPKEY"/>
-        <meta-data android:value="seu" android:name="UMENG_CHANNEL"/>
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="56ad96c667e58ef41100249d" />
+        <meta-data
+            android:name="UMENG_CHANNEL"
+            android:value="seu" />
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="fb85887c5598e510ac43099cd1eefc9a"/>
